--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+.display {
+  width: 100%;
+  border-collapse: collapse;
+
+  margin: 1em 4em;
+  font-size: 16px;
+}
+
+.display th,
+.display td {
+  padding: 8px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+.display th {
+  background-color: #f2f2f2;
 }
